--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .container {
-  max-width: 700px;
-  width: 90%;
+  max-width: 800px;
+  width: 100%;
   margin: 0 auto;
   padding: 20px;
   font-family: Arial, sans-serif;
@@ -18,4 +18,34 @@ form {
   flex-direction: row;
   gap: 10px;
   margin-bottom: 20px;
+}
+#form-tugas input,select {
+  flex: 1;
+  padding: 8px;
+  border: 1px solid #939393;
+  border-radius: 4px;
+}
+#form-tugas button {
+  background-color: #2a6aff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table,
+th,
+td {
+  border: 1px solid #363636;
+  text-align: center;
+}
+
+th,
+td {
+  padding: 4px;
 }
