--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ form {
   gap: 10px;
   margin-bottom: 20px;
 }
-#form-tugas input,select {
+#form-tugas input,
+select {
   flex: 1;
   padding: 8px;
   border: 1px solid #939393;
@@ -31,6 +32,9 @@ form {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+#form-tugas button:hover {
+  background-color: #0028a1;
 }
 
 table {
@@ -48,4 +52,26 @@ td {
 th,
 td {
   padding: 4px;
+}
+.hapus-btn {
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 4px 8px;
+}
+.hapus-btn:hover {
+  background-color: #cc0000;
+}
+#hapus-semua {
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 4px 8px;
+  gap: 4px;
+  margin-bottom: 4px;
+  float: right;
 }
